--- a/ps400lib.example/ps400lib.example.csproj
+++ b/ps400lib.example/ps400lib.example.csproj
@@ -1,12 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\ps4000ilb\ps4000ilb.csproj" />
-  </ItemGroup>
 
 </Project>
