--- a/PS4000Lib.Example/PS4000Lib.Example.csproj
+++ b/PS4000Lib.Example/PS4000Lib.Example.csproj
@@ -3,10 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ps4000ilb\ps4000ilb.csproj" />
+    <ProjectReference Include="..\ps4000ilb\ps4000lib.csproj" />
   </ItemGroup>
 
 </Project>
